# StackIt

./: .env  .replit  ENHANCED_FEATURES_SUMMARY.md  PYTHON_APP_OVERVIEW.md  README.md  cookies.txt  package-lock.json  package.json  pyproject.toml  python_app.py  python_full_app.py  replit.md  run_python.py  run_python_app.py  run_python_only.py  start_python_app.py  test_enhanced_app.py  test_python_app.py
attached_assets/: Pasted--1-Project-Planning-Prompts-Project-Structure-Prompt-Create-a-folder-structure-for-a-full-st-1752294002920_1752294002921.txt  Pasted--1-User-Experience-UX-Enhancements-These-are-small-things-that-hugely-improve-usability-Aut-1752297661952_1752297661952.txt
client/src/: App.tsx  index.css
client/src/components/ai/: ai-chatbot.tsx
client/src/components/auth/: auth-modal.tsx
client/src/components/community/: create-post-modal.tsx  post-card.tsx
client/src/components/layout/: header.tsx  notification-dropdown.tsx
client/src/components/questions/: ask-question-modal.tsx  question-card.tsx  question-modal.tsx  voting-buttons.tsx
client/src/components/ui/: tiptap-editor.tsx
client/src/lib/: queryClient.ts
client/src/pages/: community.tsx  home.tsx  landing.tsx  question-detail.tsx
python_backend/: app.py
server/: auth.ts  gemini.ts  index.ts  routes.ts  storage-old.ts  storage.ts
shared/: schema.ts
templates/: ask_question.html  base.html  index.html  login.html  question_detail.html  register.html
